--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "tasking-users",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple rest api demonstrating the features of Mongoose for mongodb and expressjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
-    "dev": "nodemon app",
-    "swagger-autogen": "node ./src/swagger.js"
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "and": "^0.0.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
