--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "start": "node app",
     "dev": "nodemon app"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Cliff Crerar <me@cliffcrerar.tech>",
+  "keywords": [
+    "expressjs",
+    "express",
+    "mognoose",
+    "mongodb",
+    "rest api",
+    "tasks and users",
+    "demo",
+    "skill demonstration"
+  ],
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
@@ -18,5 +27,14 @@
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CliffCrerar/tasking-users-backend-assignment.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CliffCrerar/tasking-users-backend-assignment/issues"
+  },
+  "homepage": "https://github.com/CliffCrerar/tasking-users-backend-assignment#readme"
 }
